# viki-trakt-sync

./: .env.example  .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CURRENT_STATE.md  Dockerfile  README.md  SESSION_COOKIE_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.toml.example  test.py  test_compare.py  test_cookies.py  test_direct.py  test_exact.py
scripts/: extract_credentials.py  inspect_trakt.py
src/viki_trakt_sync/: __init__.py  __main__.py  cache.py  canonical.py  cli.py  cli_new.py  config.py  config_provider.py  dataset.py  evaluator.py  http_cache.py  http_utils.py  matcher.py  mdl_client.py  models.py  notification.py  repository.py  trakt_client.py  viki_client.py  watch_db.py
src/viki_trakt_sync/adapters/: __init__.py  metadata.py  trakt.py  viki.py
src/viki_trakt_sync/queries/: __init__.py  match.py  status.py  watch.py
src/viki_trakt_sync/workflows/: __init__.py  sync.py
tests/: conftest.py  test_corpus_eval.py  test_corpus_offline.py  test_matcher.py  test_matcher_requests_mock.py  test_real_watchlist.py  test_smoke.py
